--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<!-- saved from url=(0060)https://www.w3schools.com/howto/tryhow_css_parallax_demo.htm -->
 <html>
-
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+     <meta name="og:title" property="og:title" content="I'm Abhishek" />
+    <meta name="og:description" property="og:description"
+        content="The official website of Abhiskek Akash" />
+    <meta name="description" content="The official website of Abhiskek Akash" />
   <title>I'm Abhishek</title>
   <style>
     @import url(//db.onlinewebfonts.com/c/2ac3af7a1f0bdbd63bfcb5efcfe7c4ad?family=Himagsikan);
@@ -745,5 +747,4 @@
     </div>
   </div>
 </body>
-
 </html>
