--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="og:description" property="og:description"
         content="The official website of Abhiskek Akash" />
     <meta name="description" content="The official website of Abhiskek Akash" />
+      <meta
+        content="https://raw.githubusercontent.com/Abhi-ak1417/Abhi-ak1417.github.io/main/banner.png"
+        property="og:image" />
   <title>I'm Abhishek</title>
   <style>
     @import url(//db.onlinewebfonts.com/c/2ac3af7a1f0bdbd63bfcb5efcfe7c4ad?family=Himagsikan);
